# i3uw

./: .gitignore  .pylintrc  README.md  config.toml  pyproject.toml
i3uw/: __main__.py  config.py  script.py
